--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A to-do app built in React.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --config ./webpack.prod.config.js --progress --colors"
   },
   "repository": {
     "type": "git",
